<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Touch N Vote</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="fpassword">Forgot Password</string>
    <string name="register">Register your account</string>
    <string name="action_settings">Settings</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="netid">Net ID</string>
    <string name="cpassword">Confirm Password</string>
    <string name="squestions">Security Questions</string>
    <string name="q1">Question-1</string>
    <string name="q2">Question-2</string>
    <string name="q3">Question-2</string>
    <string name="reqpassword">Request password</string>
    <string name="submit">submit</string>

    <string-array name="q1questions">
        <item>What is your favorite food?</item>
        <item>What school did you attend for sixth grade?</item>
        <item>Who was your childhood hero?</item>
    </string-array>
    <string-array name="q2questions">
        <item>What is your grandmother\'s first name?</item>
        <item>Where did you vacation last year?</item>
        <item>What year did you graduate from High School?</item>
    </string-array>
    <string-array name="q3questions">
        <item>What is your favorite sport?</item>
        <item>Which city you like to visit?</item>
        <item>What was your dream job as a child?</item>
    </string-array>
    <string-array name="season">
        <item>Fall</item>
        <item>Spring</item>
        <item>Summer</item>
    </string-array>

    <string name="submitButton">Submit</string>
    <string name="clearButton">Clear</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_security_question">SecurityQuestionActivity</string>
    <string name="title_activity_password_change">PasswordChangeActivity</string>
    <string name="changepassword">Gotcha! Make yourself more secured below</string>
    <string name="makemesecured">"Make me secured "</string>
    <string name="title_activity_professor_main">ProfessorMainActivity</string>
    <string name="addclass">Add Class</string>
    <string name="title_activity_add_class">AddClassActivity</string>
    <string name="addexcellist">Add Excel List</string>
    <string name="addonestudent">Add One Student</string>
    <string name="title_activity_one_student_enroll">OneStudentEnrollActivity</string>
    <string name="addonestudenttitle">Enroll a student</string>
    <string name="netidtext">Net_Id</string>
    <string name="classtext">Class</string>
    <string name="addstudent">Add Student</string>
    <string name="addnewstudent">Add New Students</string>
    <string name="title_activity_add_new_class">AddNewClassActivity</string>
    <string name="season">Season</string>
    <string name="classstartdate">Class Start Date</string>
    <string name="classenddate">Class End Date</string>
    <string name="time">Time</string>
    <string name="classlabel">Class</string>
    <string name="title_activity_store_excel_students">StoreExcelStudents</string>
    <string name="title_activity_post_question">PostQuestionActivity</string>
    <string name="postQuestionTitle">Select the quiz title and post the quiz</string>
    <string name="title_activity_post_quiz">PostQuizActivity</string>
    <string name="postquiztitle">Post quiz</string>
    <string name="classtitle">Class title</string>
    <string name="addquiz">Add quiz</string>
    <string name="postquiz">Post a quiz</string>
    <string name="startquiz">Start a quiz</string>
    <string name="title_activity_post_quiz_question">PostQuizQuestionActivity</string>
    <string name="forclass">Class:</string>
    <string name="question">Question:</string>
    <string name="answertype">Answer type:</string>
    <string name="combotype">Combo type</string>
    <string name="radiotype">Radio type</string>
    <string name="answer">Options:</string>
    <string name="plus">+</string>
    <string name="addquestion">Add Question</string>
    <string name="plusquestion">+ Question</string>
    <string name="postquestion">Post the quiz</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="postresponsetitle">Post your response</string>
    <string name="noactivity">No activity found</string>
    <string name="title_activity_check_for_quiz">CheckForQuizActivity</string>
    <string name="bringthepoll">Tap to bring the poll</string>
    <string name="viewresult">View Result</string>
    <string name="title_activity_result_title_selection">ResultTitleSelectionActivity</string>
    <string name="selectquiztitle">Select quiz title to view the result</string>
    <string name="getresult">Get Results</string>
    <string name="title_activity_display_result">DisplayResultActivity</string>
    <string name="noresult">No results found</string>
    <string name="poll1result">Poll - 1 Results</string>
    <string name="poll2results">Poll - 2 Results</string>
    <string name="poll3results">Poll - 3 Results</string>
    <string name="poll4results">Poll - 4 Results</string>
    <string name="title_activity_result_pie">ResultPieActivity</string>
    <string name="q1results">QUESTION 1 RESULTS</string>
    <string name="q2results">QUESTION 2 RESULTS</string>
    <string name="q3results">QUESTION 3 RESULTS</string>
    <string name="q4results">QUESTION 4 RESULTS</string>
    <string name="testtitle">Test title</string>

</resources>