<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfessorMainActivity" >

    <Button
        android:id="@+id/postQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addStudentButton"
        android:layout_alignRight="@+id/addStudentButton"
        android:layout_below="@+id/addStudentButton"
        android:layout_marginTop="35dp"
        android:text="@string/startquiz" />

    <Button
        android:id="@+id/addClassButton"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/addclass" />

    <Button
        android:id="@+id/addStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addClassButton"
        android:layout_alignRight="@+id/addClassButton"
        android:layout_below="@+id/addClassButton"
        android:layout_marginTop="28dp"
        android:text="@string/addnewstudent" />

    <Button
        android:id="@+id/viewResultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/postTheQuizButton"
        android:layout_alignRight="@+id/postTheQuizButton"
        android:layout_below="@+id/postTheQuizButton"
        android:layout_marginTop="27dp"
        android:text="@string/viewresult" />

    <Button
        android:id="@+id/postTheQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/postQuizButton"
        android:layout_alignRight="@+id/postQuizButton"
        android:layout_below="@+id/postQuizButton"
        android:layout_marginTop="36dp"
        android:text="@string/postquiz" />

</RelativeLayout>
