<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="90dp"
        android:text="@string/username"
        android:textSize="@dimen/txtsize" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userNameTextView"
        android:layout_alignBottom="@+id/userNameTextView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="23dp"
        android:ems="8"
        android:inputType="text"
        android:maxLength="7"  >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameTextView"
        android:layout_below="@+id/userNameEditText"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textSize="@dimen/txtsize" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordTextView"
        android:layout_alignBottom="@+id/passwordTextView"
        android:layout_alignLeft="@+id/userNameEditText"
        android:layout_alignRight="@+id/userNameEditText"
        android:ems="8"
        android:inputType="textPassword"
        android:maxLength="15" />

    <Button
        android:background="@drawable/sbuttonstyle"
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordTextView"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="49dp"
        android:text="@string/signin" />

    <Button
        android:background="@drawable/sbuttonstyle"
        android:id="@+id/fPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signInButton"
        android:layout_alignRight="@+id/signInButton"
        android:layout_below="@+id/signInButton"
        android:layout_marginTop="25dp"
        android:text="@string/fpassword" />

    <Button
        android:background="@drawable/sbuttonstyle"
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fPasswordButton"
        android:layout_alignRight="@+id/signInButton"
        android:layout_below="@+id/fPasswordButton"
        android:layout_marginTop="20dp"
        android:text="@string/register" />


</RelativeLayout>