<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OneStudentEnrollActivity" >

    <TextView
        android:id="@+id/addOneStudentTitleTextView"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="52dp"
        android:text="@string/addonestudenttitle" />

    <TextView
        android:id="@+id/netIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addOneStudentTitleTextView"
        android:layout_below="@+id/addOneStudentTitleTextView"
        android:layout_marginTop="72dp"
        android:text="@string/netidtext" />

    <TextView
        android:id="@+id/classTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/netIdTextView"
        android:layout_below="@+id/netIdTextView"
        android:layout_marginTop="76dp"
        android:text="@string/classtext" />

    <EditText
        android:id="@+id/netIdSEEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/netIdTextView"
        android:layout_alignBottom="@+id/netIdTextView"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:maxLength="7"
        android:inputType="text" />

    <Spinner
        android:id="@+id/classSpinnerOneStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/netIdSEEditText"
        android:layout_below="@+id/netIdSEEditText"
        android:layout_marginTop="44dp" />

    <Button
        android:id="@+id/addStudentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/classSpinnerOneStudent"
        android:layout_below="@+id/classSpinnerOneStudent"
        android:layout_marginTop="34dp"
        android:text="@string/addstudent" />

</RelativeLayout>
