<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PasswordChangeActivity" >

    <TextView
        android:id="@+id/addOneStudentTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:text="@string/changepassword" />

    <TextView
        android:id="@+id/fPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addOneStudentTitleTextView"
        android:layout_below="@+id/addOneStudentTitleTextView"
        android:layout_marginTop="66dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fPasswordTextView"
        android:layout_alignBottom="@+id/fPasswordTextView"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:maxLength="15"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/cNewPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fPasswordTextView"
        android:layout_alignRight="@+id/fPasswordTextView"
        android:layout_below="@+id/newPasswordEditText"
        android:layout_marginTop="21dp"
        android:text="@string/cpassword" />

    <EditText
        android:id="@+id/ConfirmPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPasswordEditText"
        android:layout_alignTop="@+id/cNewPasswordTextView"
        android:ems="10"
        android:maxLength="15"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/submitButton"
        style="@drawable/sbuttonstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmPasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:background="@drawable/sbuttonstyle"
        android:text="@string/makemesecured" />

</RelativeLayout>
